# simple-receipt-manager-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py  util.py
src/api/: srm_api.py  srm_db.py
src/api/config/: .env
src/api/controllers/: group_controller.py  receipt_controller.py  user_controller.py
src/api/errors/: srm_errors.py
src/api/handlers/: parse_request_handler.py
src/api/helpers/: mongodb_helper.py  response_helper.py
src/api/models/: groups.py  receipt.py  record.py  user.py
src/api/receipt_parser/: receipt_parser.py
src/api/receipt_parser/config/: .hashs.json  config.yml
src/api/receipt_parser/core/: __init__.py  config.py  enhancer.py  parse.py  receipt.py
src/api/receipt_parser/data/txt/: 2023-01-14-192227_002.jpeg.txt  2023-01-14-192227_003.jpeg.txt  (+12 more)
src/api/repositories/: group_repository.py  receipt_repository.py  record_repository.py  repository_factory.py  user_repository.py
src/api/utils/: validator.py
src/app/: app.py
src/app/config/: .env
src/receipt_parser/: receipt_parser.py
src/receipt_parser/config/: config.yml
src/receipt_parser/core/: config.py  enhancer.py  parse.py
src/simple_recipt_manager_backend.egg-info/: PKG-INFO  SOURCES.txt
test/mongodb/: package-lock.json  package.json
test/mongodb/app/: groups.js  receipt.js  receipts.js  record.js  records.js  user.js
test/mongodb/test/: mocha_create_test.js  mocha_helper_test.js  mocha_insert_test.js  mocha_test.js
test/mongodb/test/mock_data/: groups.json  receipts.json  records.json  users.json
