[build-system]
requires = [
   "setuptools",
   "wheel",
   "flask",
   "pymongo[srv]",
]
build-backend = "setuptools.build_meta"

[project]
name = "simple-recipt-manager-backend"
version = "0.0.1"
authors = [
  { name="lst97", email="laisiotou1997@gmail.com" },
]
description = "simple recipt manager backend server"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"